--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
 </head>
 
 <body>	
-	<div id="navigation" class="yellow_color">
+
+	<div id="navigation">
 		<a target= "_blank" href="Contacts.html">Contact Me</a>
 		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
 		<a target= "_blank" href="Games.html">A Small Game</a>
 	</div>
 	
+	<div id = "social_media"> 
+		<ul class="center_text">
+			<a target= "_blank" href="https://www.facebook.com/li.jingwei.94"><img src ="Icons/fb.jpg"></a>
+			<a target= "_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg"></a>
+			<a target= "_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg"></a>
+			<a target= "_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img src="Icons/youtube.jpg"></a>
+      		<a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="100" height="100"></a>
+		</ul>
+ 	</div>
+	
 	<div id= "NAME"> 
-	  <h1 class="shift_banner"> Jing Wei Li</h1>
-		<img src = "website cover img.jpg" width="1181" height="664">
-		<h3 class="center_text">Who I Am</h3>
+	  <h1 class="center_text">JING WEI LI</h1>
+	  <img src = "website cover img.jpg" width="1600" height="856">
+	  <h3 class="center_text">Who I Am</h3>
 		<ol class="alphabetList">
 	  		<li class="sq_bracket">
 				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
@@ -25,19 +36,6 @@
 		</ol>
 	
 	</div>
-	
-	
-<div id = "social media"> 
-  <h3 class="orange"> Social Media</h3>
-	<ul>
-		<a target= "_blank" href="https://www.facebook.com/li.jingwei.94"><img src ="Icons/fb.jpg"></a>
-		<a target= "_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg"></a>
-		<a target= "_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg"></a>
-		<a target= "_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img src="Icons/youtube.jpg"></a>
-      <a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="100" height="100"></a>
-	</ul>
-		
-  </div>
 	
 	<div id = "resume">
    		<h3>My Resume</h3>
