Added Button Effects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>	
 
-	<div id="navigation">
+	<div id="navigation" class="nav_buttons">
 		<a target= "_blank" href="Contacts.html">Contact Me</a>
 		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
 		<a target= "_blank" href="Games.html">A Small Game</a>
