--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link href="CSS/styles.css" rel="stylesheet" type="text/css" media ="screen">
 </head>
 
-<body>	
+<body>
+	<div id= "wrapper">	
 
 	<div id="navigation" class="nav_buttons">
 		<a target= "_blank" href="Contacts.html">Contact Me</a>
@@ -24,10 +25,16 @@
       		<a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="100" height="100"></a>
 		</ul>
  	</div>
+ 	
+ 	<div id= "name">
+ 		<h1 class="center_text">JING WEI LI</h1>
+ 	</div>
+ 	
+ 	<div id = "bg_image">
+ 		<img src = "cover_png.png" >
+ 	</div>
 	
-	<div id= "NAME"> 
-	  <h1 class="center_text">JING WEI LI</h1>
-	  <img src = "website cover img.jpg" width="1600" height="856">
+	<div id= "BIO"> 
 	  <h3 class="center_text">Who I Am</h3>
 		<ol class="alphabetList">
 	  		<li class="sq_bracket">
@@ -49,6 +56,7 @@
 	
 	<div id="footer">
 		<h4> COPYRIGHT JING WEI LI 2017</h4>
+		</div>
 	</div>
 </body>
 </html>
