--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<script src="JS/jquery.js" type="text/javascript"> </script>
 	<meta charset="utf-8">
 	<title>Hi, I'm Li </title>
 	<link rel="icon" href="Icons/icon png.png">
@@ -8,40 +9,37 @@
 </head>
 
 <body>
-	<div id= "wrapper">	
-
-	<div id="navigation" class="nav_buttons">
-		<a target= "_blank" href="Contacts.html">Contact Me</a>
-		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
-		<a target= "_blank" href="Games.html">A Small Game</a>
-	</div>
+  <div id= "wrapper">
+  
+  	<div id= "name">
+ 		<h1 >JING WEI LI</h1>
+ 	</div>	
 	
 	<div id = "social_media"> 
 		<ul class="center_text">
-			<a target= "_blank" href="https://www.facebook.com/li.jingwei.94"><img src ="Icons/fb.jpg"></a>
-			<a target= "_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg"></a>
-			<a target= "_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg"></a>
-			<a target= "_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img src="Icons/youtube.jpg"></a>
-      		<a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="100" height="100"></a>
+			<a target= "_blank" href="https://www.facebook.com/li.jingwei.94"><img src ="Icons/fb.jpg" width="50" height="50"></a>
+			<a target= "_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg" width="50" height="50"></a>
+			<a target= "_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg" width="50" height="50"></a>
+			<a target= "_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img src="Icons/youtube.jpg" width="50" height="50"></a>
+      		<a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="50" height="50"></a>
 		</ul>
  	</div>
  	
- 	<div id= "name">
- 		<h1 class="center_text">JING WEI LI</h1>
- 	</div>
+ 	<div id="navigation" class="nav_buttons">
+		<a target= "_blank" href="Contacts.html">Contact Me</a>
+		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
+		<a target= "_blank" href="Games.html">A Small Game</a>
+	  </div>
  	
  	<div id = "bg_image">
  		<img src = "cover_png.png" >
  	</div>
 	
 	<div id= "BIO"> 
-	  <h3 class="center_text">Who I Am</h3>
-		<ol class="alphabetList">
-	  		<li class="sq_bracket">
+	  <h3 class="center_text">Hi, I'm Li</h3>
+	  		<p class="sq_bracket">
 				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
-	  		</li>
-		</ol>
-	
+	  		</p>	
 	</div>
 	
 	<div id = "resume">
@@ -57,6 +55,6 @@
 	<div id="footer">
 		<h4> COPYRIGHT JING WEI LI 2017</h4>
 		</div>
-	</div>
+  </div>
 </body>
 </html>
