--- a/Projects.html
+++ b/Projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Graphic Design</title>
+<title>Personal Projects</title>
 <link rel="icon" href="Icons/icon png.png">
 </head>
 
