--- a/index.html
+++ b/index.html
@@ -29,30 +29,21 @@
 		<a target= "_blank" href="Contacts.html">Contact Me</a>
 		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
 		<a target= "_blank" href="Games.html">A Small Game</a>
+		<a target="_blank" href="Bio.html"> Bio</a>
 	  </div>
  	
- 	<div id = "bg_image">
- 		<img src = "cover_png.png" >
+ 	<div id = "contents">
+ 		<ul>		
+ 			<a target="_blank" href="Bio.html"><img src="Images/BANNER_BIO.jpg" width="817" height="181"></a>
+ 			<a target="_blank" href="Graphic Design.html"><img src="Images/banner_graphic_design.jpg" width="817" height="181"></a>
+ 			<a target="_blank" href="Projects.html"><img src="Images/banner_projects.jpg" width="817" height="181"></a>
+ 			<a target="_blank" href="Games.html"><img src="Images/BANNER_GAMES.jpg" width="817" height="181"></a>
+ 			<a target="_blank" href="Contacts.html"><img src="Images/banner_contacts.jpg" width="817" height="181"></a>
+ 		</ul>	
  	</div>
 	
-	<div id= "BIO"> 
-	  <h3 class="center_text">Hi, I'm Li</h3>
-	  		<p class="sq_bracket">
-				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestixxxum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
-	  		</p>	
-	</div>
 	
-	<div id = "resume">
-   		<h3>My Resume</h3>
-   			<ul>
-   				<a target= "_blank" href ="ResumeMay17.pdf"> click to see my resume</a>
-   			</ul>
-    </div>
-	
-	
-	<ul> second paragraph</ul>
-	
-	<div id="footer">
+	<div id="footer" class="_center">
 		<h4> COPYRIGHT JING WEI LI 2017</h4>
 		</div>
   </div>
