--- a/Contacts.html
+++ b/Contacts.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
+  <div id= "wrapper">
 
 	<div id="footer">
 		<h4> COPYRIGHT JING WEI LI 2017</h4>
 		</div>
+  </div>
 </body>
 </html>
