--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!doctype html>
 <html>
 <head>
-	<script src="JS/jquery.js" type="text/javascript"> </script>
-	<meta charset="utf-8">
-	<title>Hi, I'm Li </title>
-	<link rel="icon" href="Icons/icon png.png">
-	<link href="CSS/styles.css" rel="stylesheet" type="text/css" media ="screen">
+    <script src="JS/jquery.js"></script>
+    <script src="JS/main.js"></script>
+    <meta charset="utf-8">
+    <title>Hi, I'm Li </title>
+    <link rel="icon" href="Icons/icon png.png">
+    <link href="CSS/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
-  <div id= "wrapper">
-  
-  	<div id= "name">
- 		<h1 >JING WEI LI</h1>
- 	</div>	
-	
-	<div id = "social_media"> 
-		<ul class="center_text">
-			<a target= "_blank" href="https://www.facebook.com/li.jingwei.94"><img src ="Icons/fb.jpg" width="50" height="50"></a>
-			<a target= "_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg" width="50" height="50"></a>
-			<a target= "_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg" width="50" height="50"></a>
-			<a target= "_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img src="Icons/youtube.jpg" width="50" height="50"></a>
-      		<a target= "_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src = "Icons/Flickr-512x512.png" width="50" height="50"></a>
-		</ul>
- 	</div>
- 	
- 	<div id="navigation" class="nav_buttons">
-		<a target= "_blank" href="Contacts.html">Contact Me</a>
-		<a target= "_blank" href="Graphic Design.html">Graphic Design</a>
-		<a target= "_blank" href="Games.html">A Small Game</a>
-		<a target="_blank" href="Bio.html"> Bio</a>
-	  </div>
- 	
- 	<div id = "contents">
- 		<ul>		
- 			<a target="_blank" href="Bio.html"><img src="Images/BANNER_BIO.jpg" width="817" height="181"></a>
- 			<a target="_blank" href="Graphic Design.html"><img src="Images/banner_graphic_design.jpg" width="817" height="181"></a>
- 			<a target="_blank" href="Projects.html"><img src="Images/banner_projects.jpg" width="817" height="181"></a>
- 			<a target="_blank" href="Games.html"><img src="Images/BANNER_GAMES.jpg" width="817" height="181"></a>
- 			<a target="_blank" href="Contacts.html"><img src="Images/banner_contacts.jpg" width="817" height="181"></a>
- 		</ul>	
- 	</div>
-	
-	
-	<div id="footer" class="_center">
-		<h4> COPYRIGHT JING WEI LI 2017</h4>
-		</div>
-  </div>
+<div id="wrapper">
+
+    <div id="name">
+        <h1>JING WEI LI</h1>
+    </div>
+
+    <div id="social_media">
+        <ul class="center_text">
+            <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="Icons/fb.jpg" width="50"
+                                                                                  height="50"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg" width="50"
+                                                                                   height="50"></a>
+            <a target="_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg" width="50" height="50"></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                    src="Icons/youtube.jpg" width="50" height="50"></a>
+            <a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="Icons/Flickr-512x512.png"
+                                                                                        width="50" height="50"></a>
+        </ul>
+    </div>
+
+    <div id="navigation" class="nav_buttons">
+        <a target="_blank" href="Contacts.html">Contact Me</a>
+        <a target="_blank" href="Graphic Design.html">Graphic Design</a>
+        <a target="_blank" href="Games.html">A Small Game</a>
+        <a target="_blank" href="Bio.html">Bio</a>
+    </div>
+
+    <div id="contents">
+        <ul>
+            <a target="_blank" href="Bio.html"><img src="Images/BANNER_BIO.jpg" width="817" height="181"></a>
+            <a target="_blank" href="Graphic Design.html"><img src="Images/banner_graphic_design.jpg" width="817"
+                                                               height="181"></a>
+            <a target="_blank" href="Projects.html"><img src="Images/banner_projects.jpg" width="817" height="181"></a>
+            <a target="_blank" href="Games.html"><img src="Images/BANNER_GAMES.jpg" width="817" height="181"></a>
+            <a target="_blank" href="Contacts.html"><img src="Images/banner_contacts.jpg" width="817" height="181"></a>
+        </ul>
+    </div>
+
+
+    <div id="footer" class="_center">
+        <h4> COPYRIGHT JING WEI LI 2017</h4>
+    </div>
+</div>
 </body>
 </html>
