--- a/index.html
+++ b/index.html
@@ -1,57 +1,55 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <script src="JS/jquery.js"></script>
+	<script src="JS/jquery.js"></script>
     <script src="JS/main.js"></script>
-    <meta charset="utf-8">
-    <title>Hi, I'm Li </title>
-    <link rel="icon" href="Icons/icon png.png">
+    <meta charset="UTF-8">
+    <title>Hi, I'm Li</title>
+    <link rel="icon" href="images/tab icon.png">
     <link href="CSS/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
-
 <body>
-<div id="wrapper">
-
-    <div id="name">
-        <h1>JING WEI LI</h1>
-    </div>
-
-    <div id="social_media">
-        <ul class="center_text">
-            <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="Icons/fb.jpg" width="50"
-                                                                                  height="50"></a>
-            <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Icons/linkedin.jpg" width="50"
-                                                                                   height="50"></a>
-            <a target="_blank" href="https://twitter.com/MrProLi"><img src="Icons/twi.jpg" width="50" height="50"></a>
-            <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
-                    src="Icons/youtube.jpg" width="50" height="50"></a>
-            <a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="Icons/Flickr-512x512.png"
-                                                                                        width="50" height="50"></a>
-        </ul>
-    </div>
-
-    <div id="navigation" class="nav_buttons">
-        <a target="_blank" href="Contacts.html">Contact Me</a>
-        <a target="_blank" href="Graphic Design.html">Graphic Design</a>
-        <a target="_blank" href="Games.html">A Small Game</a>
-        <a target="_blank" href="Bio.html">Bio</a>
-    </div>
-
-    <div id="contents">
+    <div id ="nav">
         <ul>
-            <a target="_blank" href="Bio.html"><img src="Images/BANNER_BIO.jpg" width="817" height="181"></a>
-            <a target="_blank" href="Graphic Design.html"><img src="Images/banner_graphic_design.jpg" width="817"
-                                                               height="181"></a>
-            <a target="_blank" href="Projects.html"><img src="Images/banner_projects.jpg" width="817" height="181"></a>
-            <a target="_blank" href="Games.html"><img src="Images/BANNER_GAMES.jpg" width="817" height="181"></a>
-            <a target="_blank" href="Contacts.html"><img src="Images/banner_contacts.jpg" width="817" height="181"></a>
+            <a target="_blank" href="Bio.html">ABOUT</a>
+            <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
+            <a target="_blank" href="Projects.html">PROJECTS</a>
+            <a target="_blank" href="Games.html">GAMES</a>
+            <a target="_blank" href="Contacts.html">CONTACT</a>
         </ul>
     </div>
 
-
-    <div id="footer" class="_center">
-        <h4> COPYRIGHT JING WEI LI 2017</h4>
+    <div id="bg">
+    	<img src = "images/cover_png.png">
     </div>
-</div>
+	
+	<div id="intro">
+    	<h1>JING WEI LI</h1>
+		<h2>Designer,</h2>
+		<h2>Coder &</h2>
+		<h2>Computer Engineer</h2>
+    </div>
+		
+	<div id = "social_media">
+		<ul class="center_text">
+            <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
+                                                                                  height="50"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
+                                                                                   height="50"></a>
+            <a target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                    src="images/yt.png" width="50" height="50"></a>
+			<!-- 
+            <a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"
+                                                                                        width="50" height="50"></a>
+			-->
+			<a target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
+        </ul>	
+	</div>
+		
+	<div id="footer" class="_center">
+        <h4> &copy; JING WEI LI 2017</h4>
+    </div>
+
 </body>
 </html>
