--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <script src="JS/main.js"></script>
     <meta charset="UTF-8">
     <title>Hi, I'm Li</title>
-    <link rel="icon" href="images/tab icon.png">
+    <link rel="icon" href="images/icon png.png">
     <link href="CSS/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
-<body>
+
+<body id ="bod">
     <div id ="nav">
         <ul>
             <a target="_blank" href="Bio.html">ABOUT</a>
@@ -20,32 +21,34 @@
     </div>
 
     <div id="bg">
-    	<img src = "images/cover_png.png">
+        <img src = "images/cover_png.png">
     </div>
-	
-	<div id="intro">
-    	<h1>JING WEI LI</h1>
-		<h2>Designer,</h2>
-		<h2>Coder &</h2>
-		<h2>Computer Engineer</h2>
+
+    <div id="main">
+
+
+        <div id="intro">
+            <h1>JING WEI LI</h1>
+            <h2>Designer,</h2>
+            <h2>Programmer &</h2>
+            <h2>Computer Engineer.</h2>
+        </div>
+
+        <div id = "social_media">
+            <ul class="center_text">
+                <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
+                                                                                      height="50"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
+                                                                                       height="50"></a>
+                <a target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                        src="images/yt.png" width="50" height="50"></a>
+                <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
+                <!--width="50" height="50"></a>-->
+                <a target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
+            </ul>
+        </div>
     </div>
-		
-	<div id = "social_media">
-		<ul class="center_text">
-            <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
-                                                                                  height="50"></a>
-            <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
-                                                                                   height="50"></a>
-            <a target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
-            <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
-                    src="images/yt.png" width="50" height="50"></a>
-			<!-- 
-            <a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"
-                                                                                        width="50" height="50"></a>
-			-->
-			<a target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
-        </ul>	
-	</div>
 		
 	<div id="footer" class="_center">
         <h4> &copy; JING WEI LI 2017</h4>
