jQuery Highlighting on Social Media Div

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
         <div id = "social_media">
             <ul class="center_text">
-                <a target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
+                <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
                                                                                       height="50"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
+                <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
                                                                                        height="50"></a>
-                <a target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
-                <a target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                <a id = "sm3"  target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
+                <a id = "sm4"  target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
                         src="images/yt.png" width="50" height="50"></a>
                 <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
                 <!--width="50" height="50"></a>-->
-                <a target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
+                <a id = "sm5"  target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
             </ul>
         </div>
     </div>
