Added About Page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body id ="bod">
     <div id ="nav">
         <ul>
+            <a href="index.html">HOME</a>
             <a target="_blank" href="Bio.html">ABOUT</a>
             <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
             <a target="_blank" href="Projects.html">PROJECTS</a>
@@ -25,8 +26,6 @@
     </div>
 
     <div id="main">
-
-
         <div id="intro">
             <h1>JING WEI LI</h1>
             <h2>Designer,</h2>
