Added Featured Projects in Index

--- a/Projects.html
+++ b/Projects.html
@@ -1,18 +1,32 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Personal Projects</title>
-<link rel="icon" href="Icons/icon png.png">
+    <script src="JS/jquery.js"></script>
+    <script src="JS/common_jquery.js"></script>
+    <meta charset="utf-8">
+    <title>Projects</title>
+    <link rel="icon" href="Icons/icon png.png">
+    <link href="CSS/bio_styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
-  <div id= "wrapper">
+<div id="nav">
+    <ul>
+        <a href="index.html">HOME</a>
+        <a target="_blank" href="Bio.html">ABOUT</a>
+        <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a target="_blank" href="Projects.html">PROJECTS</a>
+        <a target="_blank" href="Games.html">GAMES</a>
+        <a target="_blank" href="Contacts.html">CONTACT</a>
+    </ul>
+</div>
 
-	<div id="footer">
-		<h4> COPYRIGHT JING WEI LI 2017</h4>
-		</div>
-  </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZjXJVdk_eOc" frameborder="0"
+        allowfullscreen></iframe>
+
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
+</div>
 
 </body>
 </html>
