--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
             </ul>
         </div>
     </div>
-		
+
+    <div id="contents">
+        <h1>FEATURED PROJECTS</h1>
+        <div id="images">
+            <a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>
+            <a href="Projects.html"><img src="images/projects.jpg"></a>
+            <a href="Games.html"><img src="images/GAME.jpg"></a>
+        </div>
+    </div>
+
 	<div id="footer" class="_center">
         <h4> &copy; JING WEI LI 2017</h4>
     </div>
