Added Resume Section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <ul>
             <a href="index.html">HOME</a>
             <a target="_blank" href="Bio.html">ABOUT</a>
+            <a target="_blank" href="Resume.html">RESUME</a>
             <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
             <a target="_blank" href="Projects.html">PROJECTS</a>
             <a target="_blank" href="Games.html">GAMES</a>
             <a target="_blank" href="Contacts.html">CONTACT</a>
+
         </ul>
     </div>
 
@@ -50,7 +52,7 @@
     </div>
 
     <div id="contents">
-        <h1>FEATURED PROJECTS</h1>
+        <h1>FEATURED CONTENTS</h1>
         <div id="images">
             <a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>
             <a href="Projects.html"><img src="images/projects.jpg"></a>
