--- a/Contacts.html
+++ b/Contacts.html
@@ -1,17 +1,31 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Contact Me</title>
-<link rel="icon" href="Icons/icon png.png">
+    <script src="JS/jquery.js"></script>
+    <script src="JS/common_jquery.js"></script>
+    <meta charset="utf-8">
+    <title>Contact Me</title>
+    <link rel="icon" href="Icons/icon png.png">
+    <link href="CSS/contacts_css.css" type="text/css" rel="stylesheet" media="screen">
 </head>
 
 <body>
-  <div id= "wrapper">
 
-	<div id="footer">
-		<h4> COPYRIGHT JING WEI LI 2017</h4>
-		</div>
-  </div>
+<div id="nav">
+    <ul>
+        <a href="index.html">HOME</a>
+        <a target="_blank" href="Resume.html">RESUME</a>
+        <a target="_blank" href="Bio.html">ABOUT</a>
+        <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a target="_blank" href="Projects.html">PROJECTS</a>
+        <a target="_blank" href="Games.html">GAMES</a>
+        <a target="_blank" href="Contacts.html">CONTACT</a>
+    </ul>
+</div>
+
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
+</div>
+
 </body>
 </html>
