--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
     <div id="contents">
         <h1>FEATURED CONTENTS</h1>
         <div id="images">
-            <a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>
-            <a href="Projects.html"><img src="images/projects.jpg"></a>
-            <a href="Games.html"><img src="images/GAME.jpg"></a>
+            <!--<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>-->
+            <!--<a href="Projects.html"><img src="images/projects.jpg"></a>-->
+            <!--<a href="Games.html"><img src="images/GAME.jpg"></a>-->
+            <a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>
+            <a href="Projects.html"><img src="images/banner_projects.jpg"></a>
+            <a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>
         </div>
     </div>
 
