--- a/Contacts.html
+++ b/Contacts.html
@@ -3,6 +3,7 @@
 <head>
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
+    <script src="JS/contact_js.js"></script>
     <meta charset="utf-8">
     <title>Contact Me</title>
     <link rel="icon" href="Icons/icon png.png">
@@ -23,9 +24,38 @@
     </ul>
 </div>
 
+<div id = "title_">
+    <h1>Let's Talk.</h1>
+</div>
+
+<div id = "phone">
+    <img id = "p_icon" src="images/phone2.png">
+</div>
+
+<div id="email">
+    <img id = "e_icon" src="images/email2.png">
+</div>
+
+
+<div id = "social_media">
+    <ul class="center_text">
+        <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="100"
+                                                                                         height="100"></a>
+        <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="100"
+                                                                                           height="100"></a>
+        <a id = "sm3"  target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="100" height="100"></a>
+        <a id = "sm4"  target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                src="images/yt.png" width="100" height="100"></a>
+        <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
+        <!--width="50" height="50"></a>-->
+        <a id = "sm5"  target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="100" height="100"></a>
+    </ul>
+</div>
+
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
 </div>
+
 
 </body>
 </html>
