Improved Scrolling Animation in Contacts

--- a/Contacts.html
+++ b/Contacts.html
@@ -38,7 +38,7 @@
 
 
 <div id = "social_media">
-    <ul class="center_text">
+    <ul id = "sub_sm" class="center_text">
         <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="100"
                                                                                          height="100"></a>
         <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="100"
@@ -53,7 +53,7 @@
 </div>
 
 <div id="footer" class="_center">
-    <h4> &copy; JING WEI LI 2017</h4>
+    <h4 id="f00ter"> &copy; JING WEI LI 2017</h4>
 </div>
 
 
