Menu Bar Now Stays on Top & Revamped Index Design

--- a/index.html
+++ b/index.html
@@ -51,16 +51,24 @@
         </div>
     </div>
 
-    <div id="contents">
-        <h1>FEATURED CONTENTS</h1>
-        <div id="images">
-            <!--<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>-->
-            <!--<a href="Projects.html"><img src="images/projects.jpg"></a>-->
-            <!--<a href="Games.html"><img src="images/GAME.jpg"></a>-->
-            <a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>
-            <a href="Projects.html"><img src="images/banner_projects.jpg"></a>
-            <a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>
-        </div>
+    <!--<div id="contents">-->
+        <!--<h1>FEATURED CONTENTS</h1>-->
+        <!--<div id="images">-->
+            <!--&lt;!&ndash;<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>&ndash;&gt;-->
+            <!--&lt;!&ndash;<a href="Projects.html"><img src="images/projects.jpg"></a>&ndash;&gt;-->
+            <!--&lt;!&ndash;<a href="Games.html"><img src="images/GAME.jpg"></a>&ndash;&gt;-->
+            <!--<a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>-->
+            <!--<a href="Projects.html"><img src="images/banner_projects.jpg"></a>-->
+            <!--<a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <div id="gfx" class="stylez">
+        <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
+    </div>
+
+    <div id="proj" class="stylez">
+        <a href="Projects.html">FEATURED PROJECTS</a>
     </div>
 
 	<div id="footer" class="_center">
