Finished Effects in Graphic Design Page

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -34,16 +34,18 @@
     <!--<a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule"><img src="images/gfx1.jpg"></a>-->
     <div id="img1x">
         <img src="images/gfx1.jpg">
-        <a class="shadow" href="#flickr">Featured Project - 2026 Time Capsule</a>
+        <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project - 2026 Time Capsule</a>
     </div>
 
 
     <div id="img2">
         <img src="images/gfx2.png" width="425px" height="400px">
+        <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class Stickers</a>
     </div>
     
     <div id = "img3">
         <img src="images/gfx3.jpg" width="400px" height="400px">
+        <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>Regular Art</a>
     </div>
 
     <div id="behance">
