Revamped Graphic Design Page

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -3,11 +3,11 @@
 <head>
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
-    <script src="JS/gfx_js.js"></script>
+    <script src="JS/gfx2_js.js"></script>
     <meta charset="utf-8">
     <title>Graphic Design</title>
     <link rel="icon" href="Icons/icon png.png">
-    <link href="CSS/gfx_styles.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/gfx2.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
@@ -31,37 +31,42 @@
 </div>
 
 <div id="design">
-    <!--<a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule"><img src="images/gfx1.jpg"></a>-->
-    <div id="img1x">
-        <img src="images/gfx1.jpg">
-        <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project - 2026 Time Capsule</a>
+    <div id="col1">
+        <div id="img1" class="imgContainer">
+            <img src="images/graphics1.jpg" height="280px" width="420px">
+            <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
+        </div>
+
+        <div id="img4" class="imgContainer">
+            <img src="images/graphics3.jpg" height="630px" width="420px">
+            <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
+        </div>
+    </div>
+    <div id="col2">
+        <div id="img2" class="imgContainer">
+            <img src="images/graphics2.jpg" height="420px" width="420px">
+            <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>Regular Art</a>
+        </div>
+
+        <div id="behance">
+            <img src="images/beh.jpg" height="420px" width="420px">
+            <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
+        </div>
+    </div>
+    <div id="col3">
+        <div id="img3" class="imgContainer">
+            <img src="images/gfx2.png" height="390px" width="420px">
+            <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
+        </div>
+
+        <div id="flickr">
+            <img src="images/flk.jpg" height="420px" width="420px">
+            <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
+        </div>
     </div>
 
 
-    <div id="img2">
-        <img src="images/gfx2.png" width="425px" height="400px">
-        <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class Stickers</a>
-    </div>
-    
-    <div id = "img3">
-        <img src="images/gfx3.jpg" width="400px" height="400px">
-        <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>Regular Art</a>
-    </div>
-
-    <div id="behance">
-        <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
-    </div>
-
-    <div id="flickr">
-        <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
-    </div>
 </div>
-
-<div id="design2">
-
-</div>
-
-
 
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
