Meta Viewport Tag in Graphic Design

--- a/Games.html
+++ b/Games.html
@@ -10,7 +10,7 @@
   <div id= "wrapper">
 
 	<div id="footer">
-		<h4> COPYRIGHT JING WEI LI 2017</h4>
+		<h4> &copy; JING WEI LI 2017</h4>
 		</div>
   </div>
 </body>
