Skill Section Animation Somewhat Functional

--- a/Resume.html
+++ b/Resume.html
@@ -140,6 +140,22 @@
 </div>
 
 <div id="skills">
+    <div id="skills_text">
+        <h1>SKILLS</h1>
+        <!--<h2 id="skill_description">#1. Languages</h2>-->
+    </div>
+    <div id="skills_wrapper">
+        <div id = "left_arrow">
+            <img src="images/arrow_l2.png">
+        </div>
+        <div id="skill_content">
+            <img src="images/skl1.png">
+        </div>
+        <div id="right_arrow">
+            <img src="images/arrow_r2.png">
+        </div>
+    </div>
+
 
 </div>
 
